# routes/index.js
@@ -1,9 +1,6 @@
 const routes = require('express').Router();
 
-const lesson1Controller = require('../controllers/lesson1');
-
-routes.get('/', lesson1Controller.corbinRoute);
-
-routes.get('/dallin', lesson1Controller.dallinRoute);
+routes.use('/', require('./swagger'));
+routes.use('/customers', require('./customers'));
 
 module.exports = routes;
